[gd_scene load_steps=9 format=2]

[ext_resource path="res://fonts/xracer.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://images/game/background.png" type="Texture" id=3]
[ext_resource path="res://images/PRUEBIS.png" type="Texture" id=4]
[ext_resource path="res://scenes/screens/levelSelection.gd" type="Script" id=5]
[ext_resource path="res://images/PRUEBIS3.png" type="Texture" id=6]
[ext_resource path="res://images/PRUEBIS2.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 49
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )
target_scene = [ "res://scenes/screens/menu.tscn", "res://scenes/levels/nivel1.tscn", "res://scenes/levels/nivel2.tscn", "res://scenes/levels/nivel3.tscn" ]

[node name="background" type="Sprite" parent="."]
position = Vector2( 958, 558 )
scale = Vector2( 1.021, 1.021 )
texture = ExtResource( 3 )

[node name="menu" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 14.0
margin_top = 950.0
margin_right = 350.0
margin_bottom = 1070.0
custom_fonts/font = SubResource( 5 )
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level1" type="TextureButton" parent="."]
margin_left = 139.0
margin_top = 105.0
margin_right = 594.0
margin_bottom = 406.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="level1"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -180.5
margin_top = -50.0
margin_right = 180.5
custom_fonts/font = SubResource( 4 )
text = "Puntaje: 00000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level2" type="TextureButton" parent="."]
margin_left = 719.866
margin_top = 96.091
margin_right = 1174.87
margin_bottom = 397.091
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="level2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -180.5
margin_top = -50.0
margin_right = 180.5
custom_fonts/font = SubResource( 4 )
text = "Puntaje: 00000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level3" type="TextureButton" parent="."]
margin_left = 1354.19
margin_top = 106.782
margin_right = 1809.19
margin_bottom = 407.782
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="level3"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -180.5
margin_top = -50.0
margin_right = 180.5
custom_fonts/font = SubResource( 4 )
text = "Puntaje: 00000"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="level1" to="." method="_on_button_pressed" binds= [ 1 ]]
[connection signal="pressed" from="level2" to="." method="_on_button_pressed" binds= [ 2 ]]
[connection signal="pressed" from="level3" to="." method="_on_button_pressed" binds= [ 3 ]]
